@@ -8,9 +8,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -23,33 +24,88 @@ public class RankingServiceTest {
     private RankingService rankingService;
 
     @Test
-    void listarRankingsDebeRetornarLista() {
+    void listarRankingsTest() {
 
         Ranking ranking = new Ranking();
-        ranking.setNombreEquipo("Team Alpha");
+        ranking.setNombreEquipo("Equipo 1");
 
-        when(rankingRepository.findAll()).thenReturn(List.of(ranking));
+        when(rankingRepository.findAll()).thenReturn(Arrays.asList(ranking));
 
-        List<Ranking> resultado = rankingService.listarRankings();
-
-        assertEquals(1, resultado.size());
-        assertEquals("Team Alpha", resultado.get(0).getNombreEquipo());
+        assertEquals(1, rankingService.listarRankings().size());
 
         verify(rankingRepository, times(1)).findAll();
     }
 
     @Test
-    void guardarRankingDebeGuardarCorrectamente() {
+    void buscarRankingPorIdTest() {
 
         Ranking ranking = new Ranking();
-        ranking.setNombreEquipo("Team Alpha");
+        ranking.setId(1L);
+        ranking.setNombreEquipo("Equipo 1");
+
+        when(rankingRepository.findById(1L)).thenReturn(Optional.of(ranking));
+
+        Ranking resultado = rankingService.buscarPorId(1L);
+
+        assertNotNull(resultado);
+        assertEquals("Equipo 1", resultado.getNombreEquipo());
+
+        verify(rankingRepository, times(1)).findById(1L);
+    }
+
+    @Test
+    void guardarRankingTest() {
+
+        Ranking ranking = new Ranking();
+        ranking.setNombreEquipo("Equipo Nuevo");
 
         when(rankingRepository.save(ranking)).thenReturn(ranking);
 
         Ranking resultado = rankingService.guardarRanking(ranking);
 
-        assertEquals("Team Alpha", resultado.getNombreEquipo());
+        assertNotNull(resultado);
+        assertEquals("Equipo Nuevo", resultado.getNombreEquipo());
 
         verify(rankingRepository, times(1)).save(ranking);
     }
+
+    @Test
+    void actualizarRankingTest() {
+
+        Ranking rankingExistente = new Ranking();
+        rankingExistente.setId(1L);
+        rankingExistente.setNombreEquipo("Equipo 1");
+        rankingExistente.setPuntos(100);
+        rankingExistente.setPosicion(1);
+        rankingExistente.setEstado("Activo");
+
+        Ranking nuevoRanking = new Ranking();
+        nuevoRanking.setNombreEquipo("Equipo Actualizado");
+        nuevoRanking.setPuntos(200);
+        nuevoRanking.setPosicion(2);
+        nuevoRanking.setEstado("Inactivo");
+
+        when(rankingRepository.findById(1L)).thenReturn(Optional.of(rankingExistente));
+        when(rankingRepository.save(any(Ranking.class))).thenReturn(rankingExistente);
+
+        Ranking resultado = rankingService.actualizarRanking(1L, nuevoRanking);
+
+        assertNotNull(resultado);
+        assertEquals("Equipo Actualizado", resultado.getNombreEquipo());
+        assertEquals(200, resultado.getPuntos());
+        assertEquals(2, resultado.getPosicion());
+        assertEquals("Inactivo", resultado.getEstado());
+
+        verify(rankingRepository, times(1)).findById(1L);
+        verify(rankingRepository, times(1)).save(any(Ranking.class));
+    }
+
+    @Test
+    void eliminarRankingTest() {
+
+        rankingService.eliminarRanking(1L);
+
+        verify(rankingRepository, times(1)).deleteById(1L);
+    }
+
 }
