@@ -9,9 +9,10 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -27,19 +28,68 @@ public class RegistrationServiceTest {
     private RegistrationService registrationService;
 
     @Test
-    void listarRegistrationsDebeRetornarLista() {
+    void listarRegistrationsTest() {
 
         Registration registration = new Registration();
+        registration.setEquipoId(1L);
 
-        when(registrationRepository.findAll())
-                .thenReturn(List.of(registration));
+        when(registrationRepository.findAll()).thenReturn(Arrays.asList(registration));
 
-        List<Registration> resultado =
-                registrationService.listarRegistrations();
+        assertEquals(1, registrationService.listarRegistrations().size());
 
-        assertEquals(1, resultado.size());
-
-        verify(registrationRepository, times(1))
-                .findAll();
+        verify(registrationRepository, times(1)).findAll();
     }
+
+    @Test
+    void buscarRegistrationPorIdTest() {
+
+        Registration registration = new Registration();
+        registration.setId(1L);
+
+        when(registrationRepository.findById(1L)).thenReturn(Optional.of(registration));
+
+        Registration resultado = registrationService.buscarPorId(1L);
+
+        assertNotNull(resultado);
+
+        verify(registrationRepository, times(1)).findById(1L);
+    }
+
+    @Test
+    void actualizarRegistrationTest() {
+
+        Registration registrationExistente = new Registration();
+        registrationExistente.setId(1L);
+        registrationExistente.setEquipoId(1L);
+        registrationExistente.setTorneoId(1L);
+        registrationExistente.setEstado("ACTIVO");
+
+        Registration nuevaRegistration = new Registration();
+        nuevaRegistration.setEquipoId(2L);
+        nuevaRegistration.setTorneoId(2L);
+        nuevaRegistration.setEstado("INACTIVO");
+
+        when(registrationRepository.findById(1L)).thenReturn(Optional.of(registrationExistente));
+        when(registrationRepository.save(any(Registration.class))).thenReturn(registrationExistente);
+
+        Registration resultado =
+                registrationService.actualizarRegistration(1L, nuevaRegistration);
+
+        assertNotNull(resultado);
+        assertEquals(2L, resultado.getEquipoId());
+        assertEquals(2L, resultado.getTorneoId());
+        assertEquals("INACTIVO", resultado.getEstado());
+
+        verify(registrationRepository, times(1)).findById(1L);
+        verify(registrationRepository, times(1)).save(any(Registration.class));
+    }
+
+    @Test
+    void eliminarRegistrationTest() {
+
+        registrationService.eliminarRegistration(1L);
+
+        verify(registrationRepository, times(1)).deleteById(1L);
+    }
+
 }
