@@ -8,9 +8,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -23,33 +24,88 @@ public class TournamentServiceTest {
     private TournamentService tournamentService;
 
     @Test
-    void listarTournamentsDebeRetornarLista() {
+    void listarTournamentsTest() {
 
         Tournament tournament = new Tournament();
-        tournament.setNombre("Torneo Mundial");
+        tournament.setNombre("Torneo 1");
 
-        when(tournamentRepository.findAll()).thenReturn(List.of(tournament));
+        when(tournamentRepository.findAll()).thenReturn(Arrays.asList(tournament));
 
-        List<Tournament> resultado = tournamentService.listarTournaments();
-
-        assertEquals(1, resultado.size());
-        assertEquals("Torneo Mundial", resultado.get(0).getNombre());
+        assertEquals(1, tournamentService.listarTournaments().size());
 
         verify(tournamentRepository, times(1)).findAll();
     }
 
     @Test
-    void guardarTournamentDebeGuardarCorrectamente() {
+    void buscarTournamentPorIdTest() {
 
         Tournament tournament = new Tournament();
-        tournament.setNombre("Torneo Mundial");
+        tournament.setId(1L);
+        tournament.setNombre("Torneo 1");
+
+        when(tournamentRepository.findById(1L)).thenReturn(Optional.of(tournament));
+
+        Tournament resultado = tournamentService.buscarPorId(1L);
+
+        assertNotNull(resultado);
+        assertEquals("Torneo 1", resultado.getNombre());
+
+        verify(tournamentRepository, times(1)).findById(1L);
+    }
+
+    @Test
+    void guardarTournamentTest() {
+
+        Tournament tournament = new Tournament();
+        tournament.setNombre("Nuevo Torneo");
 
         when(tournamentRepository.save(tournament)).thenReturn(tournament);
 
         Tournament resultado = tournamentService.guardarTournament(tournament);
 
-        assertEquals("Torneo Mundial", resultado.getNombre());
+        assertNotNull(resultado);
+        assertEquals("Nuevo Torneo", resultado.getNombre());
 
         verify(tournamentRepository, times(1)).save(tournament);
     }
+
+    @Test
+    void actualizarTournamentTest() {
+
+        Tournament tournamentExistente = new Tournament();
+        tournamentExistente.setId(1L);
+        tournamentExistente.setNombre("Torneo 1");
+        tournamentExistente.setUbicacion("Ubicación 1");
+        tournamentExistente.setCantidadEquipos(8);
+        tournamentExistente.setEstado("Activo");
+
+        Tournament nuevoTournament = new Tournament();
+        nuevoTournament.setNombre("Torneo Actualizado");
+        nuevoTournament.setUbicacion("Ubicación 2");
+        nuevoTournament.setCantidadEquipos(16);
+        nuevoTournament.setEstado("Inactivo");
+
+        when(tournamentRepository.findById(1L)).thenReturn(Optional.of(tournamentExistente));
+        when(tournamentRepository.save(any(Tournament.class))).thenReturn(tournamentExistente);
+
+        Tournament resultado = tournamentService.actualizarTournament(1L, nuevoTournament);
+
+        assertNotNull(resultado);
+        assertEquals("Torneo Actualizado", resultado.getNombre());
+        assertEquals("Ubicación 2", resultado.getUbicacion());
+        assertEquals(16, resultado.getCantidadEquipos());
+        assertEquals("Inactivo", resultado.getEstado());
+
+        verify(tournamentRepository, times(1)).findById(1L);
+        verify(tournamentRepository, times(1)).save(any(Tournament.class));
+    }
+
+    @Test
+    void eliminarTournamentTest() {
+
+        tournamentService.eliminarTournament(1L);
+
+        verify(tournamentRepository, times(1)).deleteById(1L);
+    }
+
 }
