@@ -8,9 +8,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -23,33 +24,91 @@ public class UsuarioServiceTest {
     private UsuarioService usuarioService;
 
     @Test
-    void listarUsuariosDebeRetornarLista() {
+    void listarUsuariosTest() {
 
         Usuario usuario = new Usuario();
-        usuario.setNombre("Kevin");
+        usuario.setNombre("Usuario 1");
 
-        when(usuarioRepository.findAll()).thenReturn(List.of(usuario));
+        when(usuarioRepository.findAll()).thenReturn(Arrays.asList(usuario));
 
-        List<Usuario> resultado = usuarioService.listarUsuarios();
-
-        assertEquals(1, resultado.size());
-        assertEquals("Kevin", resultado.get(0).getNombre());
+        assertEquals(1, usuarioService.listarUsuarios().size());
 
         verify(usuarioRepository, times(1)).findAll();
     }
 
     @Test
-    void guardarUsuarioDebeGuardarCorrectamente() {
+    void buscarUsuarioPorIdTest() {
 
         Usuario usuario = new Usuario();
-        usuario.setNombre("Kevin");
+        usuario.setId(1L);
+        usuario.setNombre("Usuario 1");
+
+        when(usuarioRepository.findById(1L)).thenReturn(Optional.of(usuario));
+
+        Usuario resultado = usuarioService.buscarPorId(1L);
+
+        assertNotNull(resultado);
+        assertEquals("Usuario 1", resultado.getNombre());
+
+        verify(usuarioRepository, times(1)).findById(1L);
+    }
+
+    @Test
+    void guardarUsuarioTest() {
+
+        Usuario usuario = new Usuario();
+        usuario.setNombre("Usuario Nuevo");
 
         when(usuarioRepository.save(usuario)).thenReturn(usuario);
 
         Usuario resultado = usuarioService.guardarUsuario(usuario);
 
-        assertEquals("Kevin", resultado.getNombre());
+        assertNotNull(resultado);
+        assertEquals("Usuario Nuevo", resultado.getNombre());
 
         verify(usuarioRepository, times(1)).save(usuario);
     }
+
+    @Test
+    void actualizarUsuarioTest() {
+
+        Usuario usuarioExistente = new Usuario();
+        usuarioExistente.setId(1L);
+        usuarioExistente.setNombre("Usuario 1");
+        usuarioExistente.setCorreo("correo1@correo.com");
+        usuarioExistente.setNickname("usuario1");
+        usuarioExistente.setRol("Jugador");
+        usuarioExistente.setEstado("Activo");
+
+        Usuario nuevoUsuario = new Usuario();
+        nuevoUsuario.setNombre("Usuario Actualizado");
+        nuevoUsuario.setCorreo("correo2@correo.com");
+        nuevoUsuario.setNickname("usuario2");
+        nuevoUsuario.setRol("Administrador");
+        nuevoUsuario.setEstado("Inactivo");
+
+        when(usuarioRepository.findById(1L)).thenReturn(Optional.of(usuarioExistente));
+        when(usuarioRepository.save(any(Usuario.class))).thenReturn(usuarioExistente);
+
+        Usuario resultado = usuarioService.actualizarUsuario(1L, nuevoUsuario);
+
+        assertNotNull(resultado);
+        assertEquals("Usuario Actualizado", resultado.getNombre());
+        assertEquals("correo2@correo.com", resultado.getCorreo());
+        assertEquals("usuario2", resultado.getNickname());
+        assertEquals("Administrador", resultado.getRol());
+        assertEquals("Inactivo", resultado.getEstado());
+
+        verify(usuarioRepository, times(1)).findById(1L);
+        verify(usuarioRepository, times(1)).save(any(Usuario.class));
+    }
+
+    @Test
+    void eliminarUsuarioTest() {
+
+        usuarioService.eliminarUsuario(1L);
+
+        verify(usuarioRepository, times(1)).deleteById(1L);
+    }
+
 }
